--- a/Leadfinder/vercel.json
+++ b/Leadfinder/vercel.json
@@ -1,5 +1,6 @@
-{
-  "github": {
-    "silent": true
-  }
-}
+   {
+     "buildCommand": "bun install && cd apps/nextjs && bun run build",
+     "outputDirectory": "apps/nextjs/.next",
+     "installCommand": "bun install",
+     "framework": "nextjs"
+   }
