--- a/Leadfinder/apps/nextjs/tsconfig.json
+++ b/Leadfinder/apps/nextjs/tsconfig.json
@@ -4,6 +4,7 @@
     "baseUrl": ".",
     "paths": {
       "~/*": ["./src/*"],
+      "@/*": ["./src/*"],
       "contentlayer/generated": ["./.contentlayer/generated"]
     },
     "plugins": [
